--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aspnet-idenity-v3-pw",
+  "name": "aspnet-identityv3",
   "version": "1.0.0",
   "description": "Typescript library for checking ASP.NET Identity V2 & V3 password",
   "main": "dist/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/QuercusB/aspnet-idenity-v3-pw.git"
+    "url": "git+https://github.com/QuercusB/aspnet-identityv3.git"
   },
   "keywords": [
     "ASP.NET",
@@ -25,7 +25,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/QuercusB/aspnet-idenity-v3-pw/issues"
+    "url": "https://github.com/QuercusB/aspnet-identityv3/issues"
   },
   "readmeFilename": "README.md",
   "devDependencies": {
